# rmndrs89.github.io

./: 404.html  _config.yml  _quarto.yml  about.md  courses  courses.md  feed.xml  index.html  index.qmd  posts.qmd  projects.qmd  pyproject.toml  robots.txt  sitemap.xml  talks.qmd
_layouts/: default.html
_pages/: about.md
_pages/dropdown/: index.html
assets/css/: main.css
assets/js/: giscus-setup.js
assets/json/: resume.json
assets/jupyter/: blog.ipynb.html
blog/: index.html
blog/2015/: index.html
blog/2015/code/: index.html
blog/2015/disqus-comments/: index.html
blog/2015/formatting-and-links/: index.html
blog/2015/images/: index.html
blog/2015/math/: index.html
blog/2020/: index.html
blog/2020/twitter/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
blog/2025/: index.html
books/: index.html
books/2025/: index.html
books/the_godfather/: index.html
cv/: index.html
docs/: about.html  index.html  listings.json  posts.html  projects.html  search.json  talks.html
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
people/: index.html
posts/: _metadata.yml
posts/20251112_first_post/: index.qmd
posts/20260424_slds/: index.qmd
projects/: _metadata.yml  index.html
projects/1_project/: index.html
projects/20190101_keep_control/: index.qmd
projects/20211117_digit_recognizer/: index.qmd
projects/20231016_ecological_validity/: index.qmd
projects/20231016_mobilised/: index.qmd
projects/20250106_ideafast/: index.qmd
projects/20251117_digit_recognizer/: index.qmd
projects/2_project/: index.html
projects/3_project/: index.html
projects/4_project/: index.html
projects/5_project/: index.html
projects/6_project/: index.html
projects/7_project/: index.html
projects/8_project/: index.html
projects/9_project/: index.html
publications/: index.html
repositories/: index.html
talks/: _metadata.yml  references.bib
talks/20260106_first_talk/: index.qmd
talks/20260203_hidden_markov_models/: index.qmd
talks/20260519_bayesian_estimation/: index.qmd  notebook.ipynb
talks/20260526_eredivisie/: index.qmd
talks/20260609_bayes_learning/: index.qmd  keep_control.ipynb
talks/20261216_mixture_ar/: index.qmd  location_and_scale_mixture.ipynb
teaching/: index.html
(+88 files in other folders)
