[project]
name = "rmndrs89"
version = "0.0.1"
description = "A Python virtual environment for running rmndrs89 code."
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "bambi>=0.16.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
