[project]
name = "rmndrs89"
version = "0.0.1"
description = "A Python virtual environment for running rmndrs89 code."
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "bambi>=0.16.0",
    "dynamax>=1.0.1",
    "jax[cuda12]<0.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "numpyro>=0.20.1",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "watermark>=2.6.0",
]
